Perks tile issue and fist giving alignment issue.
Perks tile issue and fist giving alignment issue.

--- a/web-app/css/crowdera.css
+++ b/web-app/css/crowdera.css
@@ -694,6 +694,12 @@ a {
 }
 /* Screen resolution 641 x 767*/
 @media only screen and (min-width: 641px) and (max-width: 767px){
+    a.charitableLink {
+        padding-left: 5px
+    }
+    div.cr-charity-lbl {
+        padding-left: 20px;
+    }
     .tile-goal .fa-inr {
         font-size: 15px !important;
     }
@@ -1401,6 +1407,7 @@ a {
     input.paypal-create {
         margin-left: -7% !important;
         width: 107%;
+        margin-top: 3px;
     }
     .form-group.col-sm-6.col-xs-11.rewardPriceClass {
         margin-left: 16px;
@@ -1497,6 +1504,13 @@ a {
 }
 /* Screen resolution 768 x 1024*/
 @media only screen and (min-width:768px) and (max-width: 1024px) {
+    .containrewards {
+        height: 240px !important;
+        overflow: hidden;
+        position: relative;
+        text-overflow: ellipsis;
+        white-space: normal;
+    }
 	.tile-goal .fa-inr {
         font-size: 15px !important;
     }
@@ -1520,7 +1534,7 @@ a {
     }
     div.cr-tablet-space{
         display: block;
-        left: -54px;	   
+        left: 36px;	   
     }
     a.cr-tablet-orgcharity{
         width: 160px;
@@ -2200,6 +2214,13 @@ a {
 
 /* Screen resolution 1025 x 1280*/
 @media only screen and (min-width:1025px) and (max-width: 1280px) {
+    div.cr-charity-lbl {
+        left: 328px;
+    }
+    div.cr-center-charity {
+        display: block;
+        left: 55px;
+    }
     .tile-goal .fa-inr {
         font-size: 15px !important;
     }
@@ -2730,6 +2751,16 @@ a {
 }
 
 @media only screen and (min-width:1025px) and (max-width: 1199px){
+    span#perkNumberAvailable{
+        font-size:12px;
+    }
+    .containrewards {
+        height: 240px !important;
+        overflow: hidden;
+        position: relative;
+        text-overflow: ellipsis;
+        white-space: normal;
+    }
 	.leftcard-column-two .bootstrap-select:not([class*="span"]):not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn),.leftcard-column-three .bootstrap-select:not([class*="span"]):not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
 	   width: 69.1% !important;
 	   float:left;
@@ -5327,13 +5358,7 @@ textarea.form-control {
 		padding-right: 22px !important;
 		padding-bottom: 10px !important;
 	}
-.containrewards{
-    height: 190px !important;
-    position: relative;
-    white-space: normal;
-	overflow: hidden;
-	text-overflow: ellipsis;
-}
+
 }
 @media only screen and (max-width: 767px){
     .navbar-collapse {
@@ -5593,6 +5618,16 @@ textarea.form-control {
 }
 
 @media only screen and (min-width: 481px) and (max-width:600px){
+    .containrewards {
+        height: 240px !important;
+        position: relative;
+        white-space: normal;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    span#perkNumberAvailable {
+        font-size: 12px !important;
+    }
 	li.perks-grid {
         width: 50%;
     }
@@ -6445,6 +6480,9 @@ textarea.form-control {
 }
 
 @media only screen and (min-width: 320px) and (max-width: 480px){
+    input#hiddencharId {
+        font-size: 12px;
+    }
 	li.perk-grid-paddings{
         padding-left: 40px;
         padding-right: 40px;
@@ -6476,6 +6514,15 @@ textarea.form-control {
 
 /* Screen resolution 320 x 640*/
 @media only screen and (min-width: 320px) and (max-width: 640px){
+    .containrewards {
+        height: 230px !important;
+    }
+    a.charitableLink {
+        padding-left: 5px
+    }
+    div.cr-charity-lbl {
+        padding-left: 20px;
+    }
     div.show-tile-text-size{
         margin-top: 6px;
         padding-left: 16px;
@@ -6776,6 +6823,7 @@ textarea.form-control {
     input.paypal-create {
          margin-left: 0;
          width: 254px;
+         margin-top: 3px;
     }
     div.cr-payment-marg{
         padding: 0;
@@ -9940,7 +9988,7 @@ div#rewardTileSpace {
 }
 
 span#perkNumberAvailable{
-    font-size:small;
+    font-size:12px;
 }
 
 p.soldOutRewards{
@@ -9970,4 +10018,11 @@ span#sold-out-text{
 
 .i-perk {
     position: relative;
+}
+.cr-center-charity{
+    display: block;
+    left: 75px;
+}
+.cr-charity-lbl{
+	padding-left: 8px;
 }
